add inspirations, change styling, add basic form styles

--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
         <p>Put your details in a div to ensure proper spacing.</p>
       </div>
     </details>
+    <h3>Forms</h3>
+    <form>
+      <label>Input
+      <input type="text" />
+    </label>
+    </form>
   </main>
   <footer>
     <span>Made by Kerim Hudson</span>
